#############################################################################
BETA PUBLIC RELEASE VERSION 1.2.0       XX-XX-XX
#############################################################################
  - NEW FEATURES
    * Added autoconf support for pdb2pka directory.
    * Added new support for passing in a single ligand residue in MOL2 format
      via the --ligand command.  Also available from the web server (with link
      to PRODRG for unsupported ligands).
    * Numerous additions to examples directory (see examples/index.html) and 
      update to User Guide.
  - BUG FIXES 
    * Fixed charge assignment error when dealing with LYN in AMBER.
    * Fixed crash when a chain has a single amino acid residue.  The code
      now reports the offending chain and residue before exiting.
    * Fixed hydrogen optimization bug where waters with no nearby atoms at
      certain orientations caused missing hydrogens.
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.2       6-23-06
#############################################################################
  - BUG FIXES 
    * Fixed a bug in the hydrogen bonding routines where PDB2PQR attempted to 
      delete an atom that had already been deleted. (thanks to Rachel Burdge)
    * Fixed a bug in chain detection routines where PDB2PQR was unable to
      detect multiple chains inside a single unnamed chain (thanks to 
      Rachel Burdge)
    * Fixed a second bug in chain detection routines where HETATM residues
      with names ending in "3" were improperly chosen for termini (thanks to
      Reut Abramovich)
    * Fixed a bug where chains were improperly detected when only containing
      one HETATM residue (thanks to Reut Abramovich)
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.1       5-3-06
#############################################################################
  - BUG FIXES 